  displayed, and $Codestriker::bugtracker is defined, then after this
  field will be a number of hyperlinks to the associated bug tracking
  records.

* Added the link "List open topics in project" to all the view topic
  screens for user convenience on large multi-project deployments.

* Refactored CvsPserver and CvsLocal into a single object, Cvs.

Version 1.8.3

* In the add comment window, clicking on the "increase context" or
  "decrease context" would erase any text which had been written.
  This has now been fixed by Kannan Goundan.

* Increasing/decreasing the context from the add comment window would
  not focus the main browser window to the exact line the comment was
  made from, after the comment has been submitted.  This has now been
  fixed.

* Committed in a whole heap of test scripts from Jason Remilliard
  which are located in the test/ subdirectory.

Version 1.8.2

* Codestriker now has the ability to view a specific file at a time in
  the view topic screen, with previous/next file links.  The old
  behaviour of viewing the entire topic text in one page is still the
  default behaviour.  The default behaviour can be changed by setting
  the $default_file_to_view variable in the configuration file.  Note
  there are now links on the view topic screen so the user can choose
  dynamically which viewing mode they would prefer to use.
  Contribution by Oliver Lohmann <oliver_lohmann@gmx.de>.

* Codestriker can now sort by the column headers in the topic list
  view, from Jason Remilliard.

* It is now possible to create Subversion topics by entering values
  in the START_TAG, END_TAG and MODULE fields on the create topic
  page, from Jason Remilliard.  See the manual for more details.

* In addition to the existing Subversion HTTP server support, it is
  now possible to integrate with a native Subversion server as well,
  from Jason Remilliard.

* Codestriker can now parse basic diff files (non unidiff and context