@@ -34,6 +34,10 @@ $gzip = '/bin/gzip';
 #$cvs = 'c:/Program Files/GNU/WinCvs 1.3/CVSNT/cvs.exe';
 $cvs = '/usr/bin/cvs';
 
+# Location of the ssh binary.  This is only required if a CVS :ext type is
+# used.
+$ssh = '/usr/local/bin/ssh';
+
 # Location of the p4 (Perforce client) binary.  This does not need to be set
 # if you are using any perforce repositories.
 $p4 = '/usr/local/bin/p4';
@@ -103,6 +107,7 @@ $bugtracker = '';
      ':pserver:sits:password@cvs.sourceforge.net:/cvsroot',
      ':pserver;proxy=abc.com;proxyport=8080:sits:pwd@cvs.dev.net',
      ':pserver:anonymous:@cvs.sourceforge.net:/cvsroot',
+     ':ext:sits@localhost:/home/sits/cvs',
      'vss:localhost',
      ':local:c:\\cvsrep',
      'c:/cvsrep2',
