@@ -19,6 +19,11 @@ Version 1.8.4
 
 * Refactored CvsPserver and CvsLocal into a single object, Cvs.
 
+* It is now possible to specify CVS repositories using the :ext access
+  method with ssh, providing that the user running the Codestriker
+  web application can ssh into the specified host without entering a
+  password interactively.
+
 Version 1.8.3
 
 * In the add comment window, clicking on the "increase context" or
